--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
         <div class="container">
             <div class="logo">
-                <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 80'%3E%3Ctext x='10' y='50' font-family='Playfair Display' font-size='40' fill='%23fff'%3EPizza Cesar%3C/text%3E%3C/svg%3E" alt="Pizza Cesar">
+                <img src="./Images/Sem Fundo.png" alt="Pizza Cesar" class="logo-img">
             </div>
             <a href="#formulario" class="btn-header">SEJA UM FRANQUEADO</a>
             <a href="plataforma/login.html" class="btn-header btn-login-header">LOGIN FRANQUEADO</a>
